grammar.js
    source_file: $ => seq(
      optional($.shebang),
      optional($.file_header),
      optional($.arg_block),
      repeat($.cmd_block),
      repeat($._stmt),
    ),

    _stmt: $ => choice(
      $._simple_stmts,
      $._complex_stmt,
    ),

    // Simple stmts

    expr_stmt: $ => prec.right(seq(
      field("expr", $.expr),
      optional(field("catch", $.catch_block)),
    )),

    primary_expr: $ => choice(
      $.literal,
      $.list_comprehension,
      $.parenthesized_expr,
      $.call,
    ),

    _unary_op_sign: $ => choice('+', '-'),

    // Assignment

    assign: $ => prec.right(seq(
      $._left_side,
      '=',
      $._right_side,
      optional(field("catch", $.catch_block)),
    )),

    // Typed local declaration: `x: int = 5`.
    //
    // typed_assign covers ALL identifiers that aren't rad-block
    // keywords. The rad/request/display cases are handled inside
    // the merged `rad_block` rule's choice (see Rad Block section
    // below) so `rad: int = 5` parses as a typed-assign branch of
    // rad_block while `rad :\n indent ...` parses as the block
    // branch - both share the same LR state, lookahead picks the
    // right one. No GLR forking or dynamic precedence needed.
    _left_side: $ => choice(
      commaSep1(field("lefts", $.var_path)),
      seq('[', sepTrail1(field("lefts", $.var_path)), ']'),
      $._left_side_single,
    ),


    _right_side: $ => prec(-1, choice(
      commaSep1($._right_side_single),
      $._right_side_single,
      field("right", $.switch_stmt),
    )),

    // todo rename to identifier_path?
    var_path: $ => prec.left(PREC.var_path, seq(
      field("root", $._identifier),
      repeat($._indexing),
    )),

    // expected to look like var_path
    _indexing: $ => prec(PREC.indexing, choice(
      seq(
        '[',
        field('indexing', choice(
          $.expr,
          $.slice,
        )),
        ']'
      ),
      seq('.', field("indexing", choice($._identifier, $.call))),
    )),

    arg_block: $ => seq(
      "args",
      colonBlock($, $._arg_stmt)
    ),

    _arg_stmt: $ => choice(
      field("declaration", $.arg_declaration),
      $._arg_constraint,
    ),

    arg_declaration: $ => choice(
      $._variadic_arg_declaration,
      $._non_variadic_arg_declaration,
    ),

    _variadic_arg_declaration: $ => seq(
      field("variadic_marker", "*"),
      field("arg_name", $._identifier),
      optional(field("rename", $.string)),
      optional(field("shorthand", $.shorthand_flag)),
      $._variadic_type_andor_default,
      optional($._arg_comment),
    ),

    _non_variadic_arg_declaration: $ => seq(
      field("arg_name", $._identifier),
      optional(field("rename", $.string)),
      optional(field("shorthand", $.shorthand_flag)),
      $._type_andor_default,
      optional($._arg_comment),
    ),

    int_arg: $ => prec(1, seq(
      field('op', repeat($._unary_op_sign)),
      field("value", choice($.int, $.scientific_number)),
    )),
    float_arg: $ => seq(
      field('op', repeat($._unary_op_sign)),
      field("value", choice($.float, $.int, $.scientific_number)),
    ),

    int_type: $ => "int",
    float_type: $ => "float",
    empty_list: $ => prec(2, seq("[", "]")),

    list: $ => choice(
      $.empty_list,
      seq("[", sepTrail0(field("list_entry", $.expr)), "]",),
    ),

    string: $ => seq(
      field("start", $.string_start),
      optional(field("contents", $.string_contents)),
      field("end", $.string_end),
    ),

    string_contents: $ => prec.right(repeat1(
      choice(
        $._escape_seq,
        field("backslash", $._not_escape_seq),
        field("content", $.string_content),
        field("interpolation", $.interpolation),
      ))),

    _escape_seq: $ => prec(1, choice(
      field("single_quote", $.esc_single_quote),
      field("double_quote", $.esc_double_quote),
      field("backtick", $.esc_backtick),
      field("newline", $.esc_newline),
      field("tab", $.esc_tab),
      field("backslash", $.esc_backslash),
      field("open_bracket", $.esc_open_bracket),
      field("close_bracket", $.esc_close_bracket),
    )),

    _not_escape_seq: _ => token.immediate('\\'),

    _identifier: $ => prec(1, choice( // prec to avoid conflict with aliases
      // if identifier is missing, *identifierRegex* will be the node marked as missing.
      // by aliasing it here, we prevent downstream from needing to worry about identifierRegex,
      // but still let them see when the identifier is missing.
      alias($.identifierRegex, "identifier"),
      // need the following aliases, otherwise tree sitter eagerly parses them out
      // as keywords, causing ERROR nodes in the tree
      alias("confirm", "identifier"),
      alias("unsafe", "identifier"),
      alias("quiet", "identifier"),
      // rad block keyword - allow use as identifier when not starting a block
      // (e.g., `rad = foo` should work as an assignment)
      alias("rad", "identifier"),
      alias("request", "identifier"),
      alias("display", "identifier"),
      // for-loop context keyword - allow use as identifier outside for-loop context
      alias("with", "identifier"),
    )),

    int: _ => /\d(_*\d+)*/,
    float: _ => /\d(_*\d+)*\.\d(_*\d+)*/,
    bool: _ => choice("true", "false"),
    literal: $ => choice(
      $.string,
      $.float,
      $.int,
      $.scientific_number,
      $.bool,
      $.list,
      $.map,
      $.null,
    ),
  },
});

module.exports.PREC = PREC;

/**
 * Creates a rule to match zero or more of the rules separated by a comma
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {ChoiceRule}
 */
function commaSep0(rule) {
  return sep0(rule, ',');
}

/**
 * Creates a rule to match zero or more occurrences of `rule` separated by `sep`, no trail.
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {ChoiceRule}
 */
function sep0(rule, separator) {
  return optional(sep1(rule, separator));
}

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return sep1(rule, ',');
}

/**
 * Creates a rule to match one or more occurrences of `rule` separated by `sep`, no trail.
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {SeqRule}
 */
function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

/**
 * Creates a rule to match zero or more occurrences of a rule, allowing for trailing commas.
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {ChoiceRule}
 */
function sepTrail0(rule) {
  return optional(sepTrail1(rule));
}

/**
 * Creates a rule to match one or more occurrences of a rule, allowing for trailing commas.
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function sepTrail1(rule) {
  return seq(rule, repeat(seq(',', rule)), optional(','));
}

/**
 * Creates a rule to match repeated occurrences of a rule as a body, starting with a colon,
 * handling indents.
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function colonBlock($, rule) {
  return seq(
    ":",
    $._newline,
    $._indent,
    repeat(rule),
    $._dedent
  );
}

/**
 * Creates a rule to match repeated occurrences of a rule as a body, starting with a colon,
 * handling indents.
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function colonBlockField($, rule, fieldName, colonToken) {
  // Most callers want the in-grammar ':' literal. rad_block passes
  // the external _block_colon token so its colon is distinguishable
  // from a typed-assign ':' (which can also follow a var_path-like
  // prefix when the variable name happens to be 'rad', 'request',
  // or 'display'). Defaulting keeps every other call site
  // unchanged.
  return seq(
    colonToken || ":",
    $._newline,
    $._indent,
    field(fieldName, repeat(rule)),
    $._dedent
  );
}
